gcp/k8s/ingressroute-canary.yaml

apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: hello-world
  namespace: default
  labels:
    app: hello-world
#  annotations:
#    kubernetes.io/ingress.class: "nginx"
spec:
  virtualhost:
    fqdn: hello.gke.khalydethylis.com
    tls:
      secretName: tls-prod
  strategy: RoundRobin
  routes:
  - match: / # matches everything else
    services:
    - name: hello-world-v1
      port: 80
      #weight: 50
    - name: hello-world-v2
      port: 80
      strategy: WeightedLeastRequest
#  - match: /v2 # matches `multi-path.bar.com/blog` or `multi-path.bar.com/blog/*`
#    services:
#    - name: hello-world-v2
#      port: 80
#      permitInsecure: true
