gcp/k8s/ingressroute.yaml

apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: hello-world
  namespace: default
  labels:
    app: hello-world
spec:
  virtualhost:
    fqdn: hello.gke.khalydethylis.com
    tls:
      secretName: tls-prod
  routes:
  - match: /v1 # matches everything else
    services:
    - name: hello-world-v1
      port: 80
  - match: /v2 # matches `multi-path.bar.com/blog` or `multi-path.bar.com/blog/*`
    services:
    - name: hello-world-v2
      port: 80
      permitInsecure: true
